Second commit After the Configuration files, of Config Manager, Driver Factory, BaseTest

--- a/src/main/resources/config/dev-config.properties
+++ b/src/main/resources/config/dev-config.properties
@@ -1,7 +1,7 @@
  # Development Env configuration
 
 # url for development
-url =https://monday.com/
+baseURL=https://monday.com
 
 # Browser configuration ( CHROME , SAFARI, EDGE, )
 browser = CHROME
