--- a/src/main/resources/config/test-config.properties
+++ b/src/main/resources/config/test-config.properties
@@ -1,7 +1,7 @@
 
 # Testing Env Configuration
 # url for Testing env
-url =https://monday.com/
+baseURl= https://monday.com
 
 # Browser configuration ( CHROME , SAFARI, EDGE, )
 browser = CHROME
