Third commit with gherkin files

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -5,13 +5,13 @@
 env=DEV
 
 # Browser configuration ( CHROME , SAFARI, EDGE, )
-browser=CHROME
+browser=EDGE
 
 # Headless Mode (TRUE OR FALSE)
 isHeadless=FALSE
 
 # Wait Configuration
-EnableWait=FALSE
+EnableWait=TRUE
 
 # Wait in seconds
 waitInSeconds=10
