--- a/src/main/resources/config/dev-config.properties
+++ b/src/main/resources/config/dev-config.properties
@@ -4,7 +4,7 @@
 baseURL=https://monday.com
 
 # Browser configuration ( CHROME , SAFARI, EDGE, )
-browser = CHROME
+browser = EDGE
 
 # default timeout for global wait
-timeout=30
+timeout=10
